--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/su37josephxia/Daydayup/issues"
   },
-  "homepage": "https://github.com/su37josephxia/Daydayup#readme"
+  "homepage": "https://github.com/su37josephxia/Daydayup#readme",
+  "dependencies": {
+    "javascript-state-machine": "^3.1.0"
+  }
 }
