--- a/package.json
+++ b/package.json
@@ -21,6 +21,10 @@
     "jest": "^27.3.1"
   },
   "dependencies": {
-    "javascript-state-machine": "^3.1.0"
+    "cheerio": "^1.0.0-rc.10",
+    "javascript-state-machine": "^3.1.0",
+    "jsdom": "^18.1.0",
+    "request": "^2.88.2",
+    "zlib": "^1.0.5"
   }
 }
