--- a/glory-report/package.json
+++ b/glory-report/package.json
@@ -4,7 +4,7 @@
   "description": "![Snip20211118_48](https://gitee.com/josephxia/picgo/raw/master/juejin/Snip20211118_48.png)",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
@@ -12,6 +12,10 @@
   "dependencies": {
     "cheerio": "^1.0.0-rc.10",
     "iconv-lite": "^0.6.3",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "js-yaml": "^4.1.0"
+  },
+  "devDependencies": {
+    "jest": "^27.3.1"
   }
 }
