fix: 调整目录 去除子项目

--- a/package.json
+++ b/package.json
@@ -17,6 +17,12 @@
     "url": "https://github.com/su37josephxia/Daydayup/issues"
   },
   "homepage": "https://github.com/su37josephxia/Daydayup#readme",
+  "dependencies": {
+    "cheerio": "^1.0.0-rc.10",
+    "iconv-lite": "^0.6.3",
+    "request": "^2.88.2",
+    "js-yaml": "^4.1.0"
+  },
   "devDependencies": {
     "jest": "^27.3.1"
   }
