--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,8 +23,7 @@ jobs:
     - uses: actions/checkout@v2
 
     # Runs a single command using the runners shell
-    - name: Run Jest
-      uses: stefanoeb/jest-action@1.0.4
-      # with:
-        # Args to jest
-        # jestArgs: # optional
+    - name: Install modules
+      run: yarn
+    - name: Run tests
+      run: yarn test --silent
