--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "cheerio": "^1.0.0-rc.10",
     "javascript-state-machine": "^3.1.0",
     "jsdom": "^18.1.0",
+    "path": "^0.12.7",
     "request": "^2.88.2",
     "zlib": "^1.0.5"
   }
