--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "iconv-lite": "^0.6.3",
     "request": "^2.88.2",
     "js-yaml": "^4.1.0",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "javascript-state-machine": "^3.1.0"
   },
   "devDependencies": {
     "jest": "^27.3.1"
