--- a/package.json
+++ b/package.json
@@ -20,9 +20,10 @@
   "dependencies": {
     "cheerio": "^1.0.0-rc.10",
     "iconv-lite": "^0.6.3",
-    "request": "^2.88.2",
+    "javascript-state-machine": "^3.1.0",
     "js-yaml": "^4.1.0",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "request": "^2.88.2"
   },
   "devDependencies": {
     "jest": "^27.3.1"
