--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "request": "^2.88.2"
   },
   "devDependencies": {
-    "jest": "^27.3.1"
+    "jest": "^27.3.1",
+    "moment": "^2.29.1"
   }
 }
